--- a/doc/dbmm_relazione_2.tex
+++ b/doc/dbmm_relazione_2.tex
@@ -43,49 +43,18 @@ Saverio Meucci\\
 \maketitle
 \thispagestyle{empty}
 
-%%%%%%%%% ABSTRACT
-\begin{abstract}
-  Abstract
-\end{abstract}
+\input{abstract}
 
-%%%%%%%%% BODY TEXT
-{\footnotesize \noindent\textbf{Keywords} - Bag of Words (BoW), SIFT, SVM, Nearest Neighbours, Hard-Soft Assignment}.
+\input{introduction}
 
-\section{Introduction}
+\input{extraction}
 
-Brief introduction
+\input{representation}
 
-\vspace{3cm}
+\input{classification}
 
-%-------------------------------------------------------------------------
-\section{Feature extraction}
+\input{results}
 
-Feature extraction step
-
-%-------------------------------------------------------------------------
-\section{Image representation}
-
-Image representation in BoW
-
-\subsection{Hard assignment}
-
-\subsection{Soft assignment}
-
-\section{Image classification}
-
-\subsection{Nearest Neighbours}
-
-\subsection{Support Vector Machines (SVM)}
-
-\subsubsection{Kernels}
-
-
-
-
-Image classification
-
-\section{Conclusion}
-
-Conclusions
+\input{conclusions}
 
 \end{document}
