--- a/doc/egbib.bib
+++ b/doc/egbib.bib
@@ -9,3 +9,21 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1304-5168},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{Gang20121255,
+title = "Improved Bags-of-Words Algorithm for Scene Recognition ",
+journal = "Physics Procedia ",
+volume = "24, Part B",
+number = "",
+pages = "1255 - 1261",
+year = "2012",
+note = "International Conference on Applied Physics and Industrial Engineering 2012 ",
+issn = "1875-3892",
+doi = "http://dx.doi.org/10.1016/j.phpro.2012.02.188",
+url = "http://www.sciencedirect.com/science/article/pii/S1875389212002313",
+author = "Liu Gang and Wang Xiaochi",
+keywords = "scene recognition",
+keywords = "bags-of-words (BoW)",
+keywords = "GMM",
+keywords = "soft assignment "
+}
