abstract and intro

--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -2,6 +2,8 @@
 
 \begin{abstract}
 
+In this paper, we evaluated the performance of Nearest Neighbour and Support Vector Machine as images classifier, using Bag of Word model. Different metric functions and different kernel functions were taken into account. With regard to features quantization, we have focused our attention to soft-assignment and truncated soft-assignment, in comparison to hard-assignment.
+
 \end{abstract}
 
 %%%%% KEYWORDS %%%%
