--- a/doc/dbmm_relazione_2.tex
+++ b/doc/dbmm_relazione_2.tex
@@ -26,7 +26,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Image classification analysis with Bag of Word model}
+\title{Image Classification Analysis with Bag of Word Model}
 
 \author{Lorenzo Cioni\\
 {\tt\small lore.cioni@gmail.com}
@@ -37,7 +37,7 @@
 % To save space, use either the email address or home page, not both
 \and
 Saverio Meucci\\
-{\tt\small smeucci91@gmail.com}
+{\tt\small s.meucci91@gmail.com}
 }
 
 \maketitle
