--- a/doc/representation.tex
+++ b/doc/representation.tex
@@ -51,8 +51,15 @@ Figure \ref{fig:softAssignment} illustrates both these problems. The small dots 
 
 In Kernel Codebook approach we apply techniques from kernel density estimation to allow a degree of ambiguity in assigning codewords to image features. 
 
-For each word $\omega$ in the vocabulary we evaluate
-$$KCB(\omega) = \frac{1}{n} \sum_{i = 1}^{n} K_{\sigma}(D(\omega, r_i))$$
+For each local feature $v$ we evaluate
+$$KCB(v) = \frac{1}{n} \sum_{i = 1}^{n} K_{\sigma}(D(v, r_i))$$
 where $n$ is the number of regions, $r_i$ is the image region $i$ and $K_{\sigma}$ is the kernel function defined as
 $$K_{\sigma} (x) = \frac{1}{\sqrt{2\pi} \sigma} e^{- \frac{1}{2} \frac{x^2}{\sigma^2}}$$
 
+In essence Kernel Codebook smoothes the hard mapping of features in an image region to the codeword vocabulary.
+
+\paragraph{Codeword uncertainty}
+
+Codeword uncertainty indicates that one image region may distribute probability mass to more than one codeword.
+
+$$UNC(v) = \frac{1}{n} \sum_{i = 1}^{n} \frac{K_{\sigma}(D(v, r_i))}{\sum_{j=1}^{|V|} K_{\sigma}(D(\omega_j, r_i))}$$
