localised soft assignment

--- a/doc/representation.tex
+++ b/doc/representation.tex
@@ -63,3 +63,7 @@ In essence Kernel Codebook smoothes the hard mapping of features in an image reg
 Codeword uncertainty indicates that one image region may distribute probability mass to more than one codeword.
 
 $$UNC(v) = \frac{1}{n} \sum_{i = 1}^{n} \frac{K_{\sigma}(D(v, r_i))}{\sum_{j=1}^{|V|} K_{\sigma}(D(\omega_j, r_i))}$$
+
+\paragraph{Localized soft assignment}
+
+In the \emph{localized soft assignment} approach, as proposed in an \emph{early cut-off} effect is produced, which removes the adverse impact of unreliable longer distances
