--- a/doc/representation.tex
+++ b/doc/representation.tex
@@ -21,7 +21,7 @@ A simple way to assign a descriptor to a visual word is to search for nearest ne
 
 Let $V = \{\omega_1, \ldots, \omega_n \}$ be the vocabulary, where $\omega_i \in \mathbb{R}^{d}$ (with $d$ the SIFT descriptor vector size, 128) and $n$ is the vocabulary size.
 
-In \emph{hard assignment}, given and image with $X = \{x_1, ..., x_p\}$ extracted local features, each local feature $x_i \in \mathbb{R}^{d}$ is assigned to one and only one codeword of the vocabulary. The assigned codeword index, $u_i$, is obtained with
+In \emph{hard assignment}, given and image with $X = \{x_1, \ldots, x_p\}$ extracted local features, each local feature $x_i \in \mathbb{R}^{d}$ is assigned to one and only one codeword of the vocabulary. The assigned codeword index, $u_i$, is obtained with
 
 $$u_i = arg \min_{j = 1, \ldots, n} ||x_i - \omega_j||$$
 
