--- a/doc/dbmm_relazione_2.tex
+++ b/doc/dbmm_relazione_2.tex
@@ -37,7 +37,7 @@
 % To save space, use either the email address or home page, not both
 \and
 Saverio Meucci\\
-{\tt\small smeucci91@gmail.com}
+{\tt\small s.meucci91@gmail.com}
 }
 
 \maketitle
