localised soft assignment distances

--- a/doc/egbib.bib
+++ b/doc/egbib.bib
@@ -27,3 +27,19 @@ keywords = "bags-of-words (BoW)",
 keywords = "GMM",
 keywords = "soft assignment "
 }
+
+@inproceedings{LingqiaoLiu:2011:DSC:2355573.2356438,
+ author = {Lingqiao Liu and Lei Wang and Xinwang Liu},
+ title = {In Defense of Soft-assignment Coding},
+ booktitle = {Proceedings of the 2011 International Conference on Computer Vision},
+ series = {ICCV '11},
+ year = {2011},
+ isbn = {978-1-4577-1101-5},
+ pages = {2486--2493},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/ICCV.2011.6126534},
+ doi = {10.1109/ICCV.2011.6126534},
+ acmid = {2356438},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
