--- a/doc/classification.tex
+++ b/doc/classification.tex
@@ -1,1 +1,30 @@
 \section{Image classification}
+
+After assigning each images with a BoF we can proceed to the classification step. For that purpose we evaluated the performance of two type of classifier: \emph{Nearest Neighbor} (NN) and \emph{Support Vector Machine} (SVM).
+
+\subsection{Nearest Neighbour}
+
+Nearest Neighbours classifies an image in base of the nearest train example. Those classifiers differentiate each other for distance measure used. In this case only Euclidean distance (L2) and $\chi^2$ distance are been used.
+
+\subsection{Support Vector Machine}
+
+\emph{Support Vector Machines} classifies an image identifying separation surface on feature space. Those surface are evaluated using different kernel functions. The kernels used in our experiments are:
+\begin{itemize}
+\item \emph{Linear kernel}
+\begin{equation}
+K(x, z) = <x, z>
+\end{equation}
+\item \emph{Histogram Intersection kernel}
+\begin{equation}
+K(x, z) = \sum_{i = 1}^{n} \min (x_i, z_i)
+\end{equation}
+\item \emph{$\chi^2$ kernel}
+\begin{equation}
+K(x, z) = \exp (-\gamma \sum_{i = 1}^{n} \frac{(x_i - z_i)^2}{x_i + z_i})
+\end{equation}
+\item \emph{RBF kernel}
+\begin{equation}
+K(x, z) = \exp (- \gamma ||x_i - z_i||)
+\end{equation}
+\end{itemize}
+SVM classifier depends on some parameters: C and $\gamma$ values are obtained with 5-fold crossvalidation.
