--- a/doc/representation.tex
+++ b/doc/representation.tex
@@ -22,9 +22,9 @@ A simple way to assign a descriptor to a visual word is to search for nearest ne
 Let $V = \{\omega_1, \ldots, \omega_n \}$ be the vocabulary, where $\omega_i \in \mathbb{R}^{d}$ (with $d$ the SIFT descriptor vector size, 128) and $n$ is the vocabulary size.
 
 In \emph{hard assignment}, given and image with $X = \{x_1, \ldots, x_p\}$ extracted local features, each local feature $x_i \in \mathbb{R}^{d}$ is assigned to one and only one codeword of the vocabulary. The assigned codeword index, $u_i$, is obtained with
-
-$$u_i = arg \min_{j = 1, \ldots, n} ||x_i - \omega_j||$$
-
+\begin{equation}
+u_i = arg \min_{j = 1, \ldots, n} ||x_i - \omega_j||
+\end{equation}
 As result we obtain an index vector that associate each local feature with its closest codeword index of the vocabulary.
 
 \subsubsection{Soft assignment}
@@ -52,26 +52,40 @@ Figure \ref{fig:softAssignment} illustrates both these problems. The small dots 
 In Kernel Codebook approach we apply techniques from kernel density estimation to allow a degree of ambiguity in assigning codewords to image features. 
 
 For each local feature $v$ we evaluate
-$$KCB(v) = \frac{1}{n} \sum_{i = 1}^{n} K_{\sigma}(D(v, r_i))$$
+\begin{equation}
+KCB(v) = \frac{1}{n} \sum_{i = 1}^{n} K_{\sigma}(D(v, \omega_i))
+\end{equation}
 where $n$ is the number of regions, $r_i$ is the image region $i$ and $K_{\sigma}$ is the kernel function defined as
-$$K_{\sigma} (x) = \frac{1}{\sqrt{2\pi} \sigma} e^{- \frac{1}{2} \frac{x^2}{\sigma^2}}$$
-
+\begin{equation}
+K_{\sigma} (x) = \frac{1}{\sqrt{2\pi} \sigma} e^{- \frac{1}{2} \frac{x^2}{\sigma^2}}
+\end{equation}
 In essence Kernel Codebook smoothes the hard mapping of features in an image region to the codeword vocabulary.
 
 \paragraph{Codeword uncertainty}
 
 Codeword uncertainty indicates that one image region may distribute probability mass to more than one codeword.
-
-$$UNC(v) = \frac{1}{n} \sum_{i = 1}^{n} \frac{K_{\sigma}(D(v, r_i))}{\sum_{j=1}^{|V|} K_{\sigma}(D(\omega_j, r_i))}$$
+\begin{equation}
+UNC(v) = \frac{1}{n} \sum_{i = 1}^{n} \frac{K_{\sigma}(D(v, \omega_i))}{\sum_{j=1}^{|V|} K_{\sigma}(D(\omega_j, r_i))}
+\end{equation}
 
 \paragraph{Localized soft assignment}
 
-The \emph{localized soft assignment} approach is proposed in \cite{LingqiaoLiu:2011:DSC:2355573.2356438}. Instead of evaluate each distance between the local feature and all the visual words we define, for each local feature $x_i$
-$$\hat{d}(x_i, \omega_j) =
+The \emph{localized soft assignment} approach is proposed in \cite{LingqiaoLiu:2011:DSC:2355573.2356438}. Instead of evaluate each distance between the local feature and all the visual words, we define, for each local feature $x_i$
+\begin{equation}
+\hat{d}(x_i, \omega_j) =
 \left\{
 \begin{array}{ll}
 d(x_i, \omega_j) & \mbox{if } \omega_j \in \mathcal{N}_k(x_i) \\
 \infty & \mbox{otherwise}
 \end{array}
-\right.$$
-where $\mathcal{N}_k$ is the set of the $k$ nearest visual words at $x_i$.
+\right.
+\end{equation}
+where $\mathcal{N}_k$ is the set of the $k$ nearest visual words at $x_i$. At this poi we che use codeword uncertainty with $\hat{d}$ as distances.
+
+\subsection{Bag of Feature representation}
+
+After the feature quatization step (with hard or soft assignment) we can proceed to create a frequency histogram of vocabulary codewords by sum each local feature codeword assignment normalized vector. This approach is called \emph{Bag of Feature} (BoF).
+
+
+
+
