--- a/doc/egbib.bib
+++ b/doc/egbib.bib
@@ -42,4 +42,22 @@ keywords = "soft assignment "
  acmid = {2356438},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
+}
+@inproceedings{BMVC.25.76,
+      title = {The devil is in the details: an evaluation of recent feature encoding methods},
+      author = {Ken Chatfield,  Victor Lempitsky,  Andrea Vedaldi and  Andrew Zisserman},
+      year={2011},
+      pages={76.1--76.12},
+      booktitle={Proceedings of the British Machine Vision Conference},
+      publisher={BMVA Press},
+      editors={Hoey, Jesse and McKenna, Stephen and Trucco, Emanuele},
+      isbn={1-901725-43-X},
+      note = {http://dx.doi.org/10.5244/C.25.76}
 } 
+
+@INPROCEEDINGS{Philbin08lostin,
+    author = {James Philbin and Michael Isard and Josef Sivic and Andrew Zisserman},
+    title = {Lost in quantization: Improving particular object retrieval in large scale image databases},
+    booktitle = {In CVPR},
+    year = {2008}
+}
