--- a/doc/classification.tex
+++ b/doc/classification.tex
@@ -2,11 +2,11 @@
 
 After assigning each images with a BoF we can proceed to the classification step. For that purpose we evaluated the performance of two type of classifier: \emph{Nearest Neighbor} (NN) and \emph{Support Vector Machine} (SVM).
 
-\subsection{Nearest Neighbour}
+\paragraph{Nearest Neighbour}
 
 Nearest Neighbours classifies an image in base of the nearest train example. Those classifiers differentiate each other for distance measure used. In this case only Euclidean distance (L2) and $\chi^2$ distance are been used.
 
-\subsection{Support Vector Machine}
+\paragraph{Support Vector Machine}
 
 \emph{Support Vector Machines} classifies an image identifying separation surface on feature space. Those surface are evaluated using different kernel functions. The kernels used in our experiments are:
 \begin{itemize}
