--- a/doc/representation.tex
+++ b/doc/representation.tex
@@ -39,7 +39,7 @@ Codeword plausibility denotes the problem of selecting a codeword without a suit
 \begin{center}
 \includegraphics[width=0.35\textwidth]{images/soft-assignment.jpg}
 \end{center}
-  \caption{\emph{Codeword uncertainty} and \emph{codeword plausibility}}
+  \caption{Voronoi segmentation of the features space}
 \label{fig:softAssignment}
 \end{figure}
 
@@ -53,19 +53,19 @@ In Kernel Codebook approach we apply techniques from kernel density estimation t
 
 For each local feature $v$ we evaluate
 \begin{equation}
-KCB(v) = \frac{1}{n} \sum_{i = 1}^{n} K_{\sigma}(D(v, \omega_i))
+KCB(v) = \frac{1}{n} \sum_{i = 1}^{n} K_{\sigma}(d(v, \omega_i))
 \end{equation}
 where $n$ is the number of regions, $r_i$ is the image region $i$ and $K_{\sigma}$ is the kernel function defined as
 \begin{equation}
 K_{\sigma} (x) = \frac{1}{\sqrt{2\pi} \sigma} e^{- \frac{1}{2} \frac{x^2}{\sigma^2}}
 \end{equation}
-In essence Kernel Codebook smoothes the hard mapping of features in an image region to the codeword vocabulary.
+In essence, Kernel Codebook smoothes the hard mapping of features in an image region to the codeword vocabulary.
 
 \paragraph{Codeword uncertainty}
 
 Codeword uncertainty indicates that one image region may distribute probability mass to more than one codeword.
 \begin{equation}
-UNC(v) = \frac{1}{n} \sum_{i = 1}^{n} \frac{K_{\sigma}(D(v, \omega_i))}{\sum_{j=1}^{|V|} K_{\sigma}(D(\omega_j, r_i))}
+UNC(v) = \frac{1}{n} \sum_{i = 1}^{n} \frac{K_{\sigma}(d(v, \omega_i))}{\sum_{j=1}^{|V|} K_{\sigma}(d(\omega_j, r_i))}
 \end{equation}
 
 \paragraph{Localized soft assignment}
