correct formula and update results

--- a/doc/egbib.bib
+++ b/doc/egbib.bib
@@ -61,3 +61,20 @@ keywords = "soft assignment "
     booktitle = {In CVPR},
     year = {2008}
 }
+
+@inproceedings{Gemert:2008:KCS:1478172.1478227,
+ author = {Gemert, Jan C. and Geusebroek, Jan-Mark and Veenman, Cor J. and Smeulders, Arnold W.},
+ title = {Kernel Codebooks for Scene Categorization},
+ booktitle = {Proceedings of the 10th European Conference on Computer Vision: Part III},
+ series = {ECCV '08},
+ year = {2008},
+ isbn = {978-3-540-88689-1},
+ location = {Marseille, France},
+ pages = {696--709},
+ numpages = {14},
+ url = {http://dx.doi.org/10.1007/978-3-540-88690-7_52},
+ doi = {10.1007/978-3-540-88690-7_52},
+ acmid = {1478227},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
